# CS61A_projects

./: .gitignore  README.md  pyproject.toml  pyproject2.toml
Lab_and_Homework/Labs/lab02/: lab02.py
Projects/hog/: hog.py
hog/: .ok_history  .ok_storage
