[project]
name = "cs61a"
version = "0.1.0"
description = "CS61A learning projects, labs, and homework"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 100

extend-exclude = [
    "gui_files/static",
]

[tool.ruff.lint]

select = [
    "E",    # pycodestyle 错误
    "W",    # pycodestyle 警告
    "F",    # Pyflakes（未使用变量、导入等）
    "I",    # isort（导入排序）
    "UP",   # pyupgrade（语法升级建议）
    "B",    # flake8-bugbear（常见 bug 模式）
    "RUF100",  # 检测未使用的 noqa 注释
]

ignore = [
    "E501",   # 行太长（由格式化器处理）
    "E402",   # 导入不在文件顶部
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "F811",   # 允许测试中重复定义函数
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
